QS-1145: Small fixes

--- a/src/scss/_partials/_thread-toolbar.scss
+++ b/src/scss/_partials/_thread-toolbar.scss
@@ -52,8 +52,11 @@
 					line-height: 50px;
 				}
 
-				.active {
+				.active-green {
 					color: $light-green;
+				}
+				.active-red {
+					color: #F44336;
 				}
 			}
 			&.right {
