--- a/src/scss/_partials/_fonts.scss
+++ b/src/scss/_partials/_fonts.scss
@@ -83,7 +83,7 @@ $nekuno-logo-font: 'klinic_slabmedium';
 .icon-spinner:before {
 	content: "\e97a";
 }
-.icon-spinner, .icon-thumbs-up, .icon-thumbs-down {
+.icon-spinner, .icon-thumbs-up, .icon-thumbs-down, .icon-star {
 	display: inline-block;
 }
 .icon-circle:before {
