QS-1145: Add interests and questions to user recommendations

--- a/src/scss/pages/other-questions.scss
+++ b/src/scss/pages/other-questions.scss
@@ -1,7 +1,10 @@
 @import '../_partials/colors';
 
-body #root .App .view .page.other-questions-page  {
-  #page-content {
+body #root .App .view .page {
+  #page-content.recommendation-page .other-questions-container {
+    text-align: left;
+    margin: 30px auto 0;
+    width: 85%;
     .other-questions-header-container {
       padding-top: 10px;
       text-align: center;
