--- a/src/scss/pages/recommendations.scss
+++ b/src/scss/pages/recommendations.scss
@@ -58,7 +58,10 @@ body #root .App {
 
           .swiper-slide {
             background-color: $dark-purple;
-            width: 100%;
+
+            &.active {
+              width: 100%;
+            }
           }
           .user-images {
             height: 250px;
@@ -106,6 +109,7 @@ body #root .App {
               padding-top: 1px;
               padding-left: 8%;
               padding-bottom: 1px;
+              width: 92%;
             }
 
             .profile-data, .profile-about-me {
@@ -184,6 +188,52 @@ body #root .App {
                 border-radius: 5px;
                 -moz-border-radius: 5px;
                 -webkit-border-radius: 5px;
+              }
+            }
+          }
+
+          .content-list {
+            .card {
+              display: inline-block;
+              margin: 5px 1% 5px 1%;
+              width: 48%;
+            }
+          }
+          .content-carousel .swiper-slide {
+            width: 275px;
+          }
+          .contents-empty {
+            text-align: center;
+            margin-top: 30%;
+          }
+
+          .other-user-links {
+            margin: 0 auto;
+            padding: 20px 0;
+            .other-user-questions-link, .other-user-interests-link {
+              color: $deep-purple;
+              cursor: pointer;
+              display: inline-block;
+              margin: 0 5%;
+              font-size: 1.2em;
+              font-weight: bold;
+            }
+            &.single {
+              background-color: $deep-purple-translucent;
+              color: #fff;
+              cursor: pointer;
+              font-size: 1.5em;
+              text-align: left;
+              padding-left: 10%;
+
+              .other-user-link-back, .other-user-link-text {
+                display: inline-block;
+              }
+              .other-user-link-back {
+                font-size: 0.7em;
+              }
+              .other-user-link-text {
+                margin-left: 5%;
               }
             }
           }
