QS-1145: Change other gallery page and keep index in recommendations

--- a/src/scss/pages/recommendations.scss
+++ b/src/scss/pages/recommendations.scss
@@ -64,6 +64,7 @@ body #root .App {
             }
           }
           .user-images {
+            cursor: pointer;
             height: 250px;
             overflow: hidden;
             width: 100%;
