QS-1145: Fix colors

--- a/src/scss/_partials/_thread-toolbar.scss
+++ b/src/scss/_partials/_thread-toolbar.scss
@@ -53,10 +53,10 @@
 				}
 
 				.active-green {
-					color: $light-green;
+					color: $material-yellow;
 				}
 				.active-red {
-					color: #F44336;
+					color: $material-red;
 				}
 			}
 			&.right {
