QS-1188: min-height

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -82,6 +82,9 @@
 			.discover-video {
 				width: 100%;
 			}
+			.image {
+				min-height: 224px;
+			}
 			.image img {
 				width: 100%;
 				vertical-align: middle;
