--- a/src/scss/_partials/_questions_banner.scss
+++ b/src/scss/_partials/_questions_banner.scss
@@ -4,7 +4,7 @@ body #root .App .view {
     left: 0;
     max-width: 480px;
     padding: 10px 5%;
-    position: absolute;
+    //position: absolute;
     right: 0;
     text-align: center;
 
