--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -34,6 +34,7 @@ body #root .App .view .page.other-user-page {
         display: inline-block;
         font-size: 2em;
         margin-right: 15px;
+        margin-top: 10px;
       }
       .send-message-button {
         margin: 10px 0 0 20px;
@@ -43,8 +44,7 @@ body #root .App .view .page.other-user-page {
         }
       }
       .user-description {
-        margin-top: 10px;
-        margin-bottom: 20px;
+        margin-bottom: 5px;
 
         .similarity {
           font-weight: bold;
@@ -104,6 +104,7 @@ body #root .App .view .page.other-user-page {
       width: 200%;
       background-color: $deep-purple-translucent;
       margin-left: -50%;
+      margin-top: 20px;
       text-align: center;
     }
 
@@ -146,9 +147,14 @@ body #root .App .view .page.other-user-page {
     }
 
     .like-button {
+      font-size: 1.3em;
       margin-top: -10px !important;
       margin-left: 10px;
       vertical-align: middle;
+
+      .yellow {
+        color: $material-yellow;
+      }
     }
   }
 }
