--- a/src/scss/pages/discover.scss
+++ b/src/scss/pages/discover.scss
@@ -9,6 +9,11 @@ body #root .App .view .page.discover-page {
       position: relative;
     }
 
+    .small-chip-list {
+      margin: 20px auto;
+      text-align: center;
+    }
+
     .user-list {
       .card {
         display: inline-block;
