--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -7,6 +7,7 @@ $purple: #2d205f;
 $dark-blue: #1b1843;
 $light-blue: #6abeee;
 $dark-gray: #1d2029;
+$regular-gray: #424242;
 $light-gray: #888888;
 $light-gray-translucent: rgba(50, 50, 50, 0.5);
 $light-green: #32ca91;
