--- a/src/scss/_partials/_notifications.scss
+++ b/src/scss/_partials/_notifications.scss
@@ -37,6 +37,28 @@
 		}
 		.notification-excerpt {
 			color: $light-gray;
+
+			&.break-words {
+				overflow-wrap: break-word;
+				word-wrap: break-word;
+				//https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
+				-ms-word-break: break-all;
+				/* This is the dangerous one in WebKit, as it breaks things wherever */
+				word-break: break-all;
+				/* Instead use this non-standard one: */
+				word-break: break-word;
+
+				/* Adds a hyphen where the word breaks, if supported (No Blink) */
+				-ms-hyphens: auto;
+				-moz-hyphens: auto;
+				-webkit-hyphens: auto;
+				hyphens: auto;
+			}
+			&.truncate {
+				white-space: nowrap;
+				overflow: hidden;
+				text-overflow: ellipsis;
+			}
 		}
 		.notification-time {
 			color: $light-gray;
