QS-1196: Change card user

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -117,22 +117,35 @@
 	&.person-card {
 		.card-content {
 			.card-content-inner {
-				.like-icon-container {
-					color: $material-yellow;
-					margin-top: -35px;
-					height: 35px;
-					font-size: 1.4em;
-				}
 				.matching {
 					margin-top: -7px;
 				}
 			}
 		}
 		.card-footer {
+			.like-icon-container {
+				color: #fff;
+				font-size: 1.4em;
+				height: 31px;
+				margin: auto;
+
+				.icon-star {
+					vertical-align: middle;
+				}
+			}
 			.matching-value {
 				color: $regular-gray;
 				font-weight: bold;
 				margin: auto;
+			}
+
+			&.liked {
+				background: $material-orange-light;
+				padding: 0;
+			}
+
+			&::before {
+				height: 0;
 			}
 		}
 	}
