--- a/src/scss/_partials/_colors.scss
+++ b/src/scss/_partials/_colors.scss
@@ -39,6 +39,7 @@ $material-lime: #CDDC39;
 $material-yellow: #FFEB3B;
 $material-amber: #FFC107;
 $material-orange: #FF9800;
+$material-orange-light: #FFB640;
 $material-deep-orange: #FF5722;
 $material-brown: #795548;
 $material-grey: #9E9E9E;
