QS-1198: Add online text in messages page and change online view in chat threads page

--- a/src/scss/_partials/_navbar.scss
+++ b/src/scss/_partials/_navbar.scss
@@ -59,6 +59,12 @@
 				font-size: 25px;
 			}
 		}
+		.bottom-text {
+			margin-top: -25px;
+			font-size: 0.7em;
+			color: $light-green;
+			font-weight: bold;
+		}
 
 		.open-panel {
 			display: block;
