--- a/src/scss/_partials/_theme.color.scss
+++ b/src/scss/_partials/_theme.color.scss
@@ -112,6 +112,15 @@ i.icon-bars.theme-nekuno,
 .theme-nekuno label.label-checkbox input[type="radio"]:checked + .item-media i.icon-form-checkbox {
   background-color: $deep-purple;
 }
+.theme-nekuno label.label-checkbox i.icon-form-checkbox.checked {
+  background-color: $deep-purple;
+  border: none;
+}
+.theme-nekuno label.label-checkbox i.icon-form-checkbox.checked:after {
+  background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20x%3D'0px'%20y%3D'0px'%20viewBox%3D'0%200%2012%209'%20xml%3Aspace%3D'preserve'%3E%3Cpolygon%20fill%3D'%23ffffff'%20points%3D'12%2C0.7%2011.3%2C0%203.9%2C7.4%200.7%2C4.2%200%2C4.9%203.9%2C8.8%203.9%2C8.8%203.9%2C8.8%20'%2F%3E%3C%2Fsvg%3E");
+  -webkit-background-size: 12px 9px;
+  background-size: 12px 9px;
+}
 .theme-nekuno label.label-radio input[type="checkbox"]:checked ~ .item-inner,
 .theme-nekuno label.label-radio input[type="radio"]:checked ~ .item-inner {
   background-image: url("data:image/svg+xml;charset=utf-8,%3Csvg%20xmlns%3D'http%3A%2F%2Fwww.w3.org%2F2000%2Fsvg'%20viewBox%3D'0%200%2013%2010'%3E%3Cpolygon%20fill%3D'%23673ab7'%20points%3D'11.6%2C0%204.4%2C7.2%201.4%2C4.2%200%2C5.6%204.4%2C10%204.4%2C10%204.4%2C10%2013%2C1.4%20'%2F%3E%3C%2Fsvg%3E");
