QS-1198: Add online status in other user page and user cards

--- a/src/scss/_partials/_card.scss
+++ b/src/scss/_partials/_card.scss
@@ -115,6 +115,13 @@
 	}
 
 	&.person-card {
+		.card-header {
+			.online-status {
+				font-size: 0.8em;
+				color: $light-green;
+				font-weight: bold;
+			}
+		}
 		.card-content {
 			.card-content-inner {
 				.matching {
