QS-1197: Add social netwoks banner

--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -33,6 +33,7 @@
 @import '_partials/social-wheels';
 @import '_partials/facebook-register-button';
 @import '_partials/questions_banner';
+@import '_partials/social_networks_banner';
 @import '_partials/guest-banner';
 @import '_partials/empty-message';
 @import '_partials/processes-progress';
