--- a/src/scss/pages/edit-profile.scss
+++ b/src/scss/pages/edit-profile.scss
@@ -24,6 +24,11 @@ body #root .App .view .page.user-page  {
         margin: 30px 0 0 0;
 
         li {
+          .textarea-title {
+            font-size: 0.8em;
+            font-weight: bold;
+            text-align: center;
+          }
           textarea {
             display: block;
             font-size: 0.85em;
