--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -20,12 +20,12 @@ body #root .App .view .page.user-page {
         padding-left: 50%;
       }
 
-      .profile-data, .profile-about-me {
+      .profile-data {
         display: table;
         padding: 5px;
         width: 100%;
 
-        span {
+        > span {
           width: 50%;
           margin-top: 5px;
         }
@@ -40,7 +40,7 @@ body #root .App .view .page.user-page {
           margin-right: 5%;
           width: 45%;
         }
-        .profile-about-me-value {
+        .profile-data-value-long {
           margin-top: 1.5ex;
           width: 100%;
           margin-bottom: 3ex;
@@ -49,9 +49,10 @@ body #root .App .view .page.user-page {
             cursor: pointer;
           }
         }
-        .profile-about-me-name {
+        .profile-data-name-long {
           font-weight: bold;
           width: 100%;
+          margin-top: 5px;
         }
       }
     }
