--- a/src/scss/pages/user.scss
+++ b/src/scss/pages/user.scss
@@ -44,6 +44,20 @@ body #root .App .view .page.user-page {
           margin-top: 1.5ex;
           width: 100%;
           margin-bottom: 3ex;
+          overflow-wrap: break-word;
+          word-wrap: break-word;
+          //https://css-tricks.com/snippets/css/prevent-long-urls-from-breaking-out-of-container/
+          -ms-word-break: break-all;
+          /* This is the dangerous one in WebKit, as it breaks things wherever */
+          word-break: break-all;
+          /* Instead use this non-standard one: */
+          word-break: break-word;
+
+          /* Adds a hyphen where the word breaks, if supported (No Blink) */
+          -ms-hyphens: auto;
+          -moz-hyphens: auto;
+          -webkit-hyphens: auto;
+          hyphens: auto;
           .see-more {
             color: $deep-purple;
             cursor: pointer;
