--- a/src/scss/pages/edit-profile.scss
+++ b/src/scss/pages/edit-profile.scss
@@ -31,6 +31,7 @@ body #root .App .view .page.user-page  {
           .textarea-title {
             font-size: 0.8em;
             font-weight: bold;
+            margin-bottom: 20px;
             max-width: 90%;
           }
           textarea {
