--- a/src/scss/pages/other-user.scss
+++ b/src/scss/pages/other-user.scss
@@ -68,6 +68,10 @@ body #root .App .view .page.other-user-page {
         padding-top: 1px;
         padding-bottom: 1px;
         padding-left: 50%;
+
+        h3 {
+          font-size: 1.3em;
+        }
       }
 
       .profile-data {
@@ -117,6 +121,7 @@ body #root .App .view .page.other-user-page {
           font-weight: bold;
           width: 100%;
           margin-top: 5px;
+          font-size: 1.2em;
         }
       }
     }
