--- a/src/scss/layout.scss
+++ b/src/scss/layout.scss
@@ -39,6 +39,7 @@
 @import '_partials/processes-progress';
 @import '_partials/loading-spinner-css';
 @import '_partials/thread-toolbar';
+@import '_partials/filter-content-buttons';
 
 * {
 	-webkit-tap-highlight-color: rgba(0, 0, 0, 0); /* make transparent link selection, adjust last value opacity 0 to 1.0 */
