QS-1234: Add terms text below facebook button

--- a/src/scss/pages/home.scss
+++ b/src/scss/pages/home.scss
@@ -88,6 +88,12 @@ body #root .App .view.home-view {
       width: 80%;
     }
 
+    .register-sub-title {
+      font-size: 0.9em;
+      padding: 0 10%;
+      margin-top: -20px;
+    }
+
     .register-text-block {
       height: 50px;
       text-align: center;
